crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__bound_delay_field.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#9 : @constr[0](@delay int) = constr 0 (delay (let parameter#8 : int = 21 in
trace "called" in parameter#8)) in
addInteger (case@Tag subject#9 of
  0 x#10 -> force x#10) (case@Tag subject#9 of
  0 y#11 -> force y#11)
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_9
    [[(builtin addInteger) (case subject_9 (lam x_10 (force x_10)))]
      (case subject_9 (lam y_11 (force y_11)))])
    (constr 0
      (delay
        [(lam parameter_8
          (force [[(force (builtin trace)) (con string "called")] (delay parameter_8)]))
          (con integer 21)]))])
--- optimized Core
let field#7 : @delay int = delay (trace "called" in 21) in
let anf#5 : int = force field#7 in
let anf#6 : int = force field#7 in
addInteger anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam field_1
      [(lam anf_2 [(lam anf_3 [[(builtin addInteger) anf_2] anf_3]) (force field_1)])
        (force field_1)])
      (delay (force [[builtin_4 (con string "called")] (delay (con integer 21))]))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let subject#9 : @constr[0](@delay int) = constr 0 (delay (let parameter#8 : int = 21 in
trace "called" in parameter#8)) in
let anf#12 : int = case@Tag subject#9 of
  0 x#10 -> force x#10 in
let anf#13 : int = case@Tag subject#9 of
  0 y#11 -> force y#11 in
addInteger anf#12 anf#13
--- isolated folded Core
let field#14 : @delay int = delay (let parameter#8 : int = 21 in
trace "called" in parameter#8) in
let subject#9 : @constr[0](@delay int) = constr 0 field#14 in
let anf#12 : int = let x#10 : @delay int = field#14 in
force x#10 in
let anf#13 : int = let y#11 : @delay int = field#14 in
force y#11 in
addInteger anf#12 anf#13
--- isolated cleaned Core
let field#14 : @delay int = delay (trace "called" in 21) in
let anf#12 : int = force field#14 in
let anf#13 : int = force field#14 in
addInteger anf#12 anf#13
--- isolated UPLC before
(program 1.1.0
  [(lam subject_9
    [(lam anf_12
      [(lam anf_13 [[(builtin addInteger) anf_12] anf_13])
        (case subject_9 (lam y_11 (force y_11)))])
      (case subject_9 (lam x_10 (force x_10)))])
    (constr 0
      (delay
        [(lam parameter_8
          (force [[(force (builtin trace)) (con string "called")] (delay parameter_8)]))
          (con integer 21)]))])
--- isolated UPLC after
(program 1.1.0
  [(lam field_14
    [(lam anf_12
      [(lam anf_13 [[(builtin addInteger) anf_12] anf_13]) (force field_14)])
      (force field_14)])
    (delay
      (force
        [[(force (builtin trace)) (con string "called")] (delay (con integer 21))]))])
--- result
(con integer 42)
--- logs
["called", "called"]
