crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__bound_escape.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#9 : @constr[0](int) = constr 0 (trace "field" in 21) in
let subject#10 : @constr[0](int) = subject#9 in
let subject#11 : @constr[0](int) = subject#10 in
let first#14 : int = case@Tag subject#11 of
  0 x#12 -> x#12 in
let second#15 : int = case@Tag subject#9 of
  0 y#13 -> y#13 in
constr 0 subject#9 (addInteger first#14 second#15)
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_9
    [(lam subject_10
      [(lam subject_11
        [(lam first_14
          [(lam second_15 (constr 0 subject_9 [[(builtin addInteger) first_14] second_15]))
            (case subject_9 (lam y_13 y_13))])
          (case subject_11 (lam x_12 x_12))])
        subject_10])
      subject_9])
    (constr 0
      (force
        [[(force (builtin trace)) (con string "field")] (delay (con integer 21))]))])
--- optimized Core
let anf#8 : int = trace "field" in 21 in
let subject#1 : @constr[0](int) = constr 0 anf#8 in
let anf#9 : int = addInteger anf#8 anf#8 in
constr 0 subject#1 anf#9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_2
      [(lam subject_3
        [(lam anf_4 (constr 0 subject_3 anf_4)) [[(builtin addInteger) anf_2] anf_2]])
        (constr 0 anf_2)])
      (force [[builtin_5 (con string "field")] (delay (con integer 21))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#16 : int = trace "field" in 21 in
let subject#9 : @constr[0](int) = constr 0 anf#16 in
let subject#10 : @constr[0](int) = subject#9 in
let subject#11 : @constr[0](int) = subject#10 in
let first#14 : int = case@Tag subject#11 of
  0 x#12 -> x#12 in
let second#15 : int = case@Tag subject#9 of
  0 y#13 -> y#13 in
let anf#17 : int = addInteger first#14 second#15 in
constr 0 subject#9 anf#17
--- isolated folded Core
let anf#16 : int = trace "field" in 21 in
let subject#9 : @constr[0](int) = constr 0 anf#16 in
let subject#10 : @constr[0](int) = subject#9 in
let subject#11 : @constr[0](int) = subject#10 in
let first#14 : int = let x#12 : int = anf#16 in
x#12 in
let second#15 : int = let y#13 : int = anf#16 in
y#13 in
let anf#17 : int = addInteger first#14 second#15 in
constr 0 subject#9 anf#17
--- isolated cleaned Core
let anf#16 : int = trace "field" in 21 in
let subject#9 : @constr[0](int) = constr 0 anf#16 in
let anf#17 : int = addInteger anf#16 anf#16 in
constr 0 subject#9 anf#17
--- isolated UPLC before
(program 1.1.0
  [(lam anf_16
    [(lam subject_9
      [(lam subject_10
        [(lam subject_11
          [(lam first_14
            [(lam second_15
              [(lam anf_17 (constr 0 subject_9 anf_17))
                [[(builtin addInteger) first_14] second_15]])
              (case subject_9 (lam y_13 y_13))])
            (case subject_11 (lam x_12 x_12))])
          subject_10])
        subject_9])
      (constr 0 anf_16)])
    (force
      [[(force (builtin trace)) (con string "field")] (delay (con integer 21))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_16
    [(lam subject_9
      [(lam anf_17 (constr 0 subject_9 anf_17))
        [[(builtin addInteger) anf_16] anf_16]])
      (constr 0 anf_16)])
    (force
      [[(force (builtin trace)) (con string "field")] (delay (con integer 21))])])
--- result
(constr 0 (constr 0 (con integer 21)) (con integer 42))
--- logs
["field"]
