crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__bound_function_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int) = constr 0 (trace "field" in 42) in
(\ignored#3 : int -> case@Tag subject#1 of
  0 x#2 -> x#2) 0
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1 [(lam ignored_3 (case subject_1 (lam x_2 x_2))) (con integer 0)])
    (constr 0
      (force
        [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))])
--- optimized Core
trace "field" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "field")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : int = trace "field" in 42 in
let subject#1 : @constr[0](int) = constr 0 anf#4 in
(\ignored#3 : int -> case@Tag subject#1 of
  0 x#2 -> x#2) 0
--- isolated folded Core
let anf#4 : int = trace "field" in 42 in
let subject#1 : @constr[0](int) = constr 0 anf#4 in
(\ignored#3 : int -> let x#2 : int = anf#4 in
x#2) 0
--- isolated cleaned Core
trace "field" in 42
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam subject_1 [(lam ignored_3 (case subject_1 (lam x_2 x_2))) (con integer 0)])
      (constr 0 anf_4)])
    (force
      [[(force (builtin trace)) (con string "field")] (delay (con integer 42))])])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))
--- result
(con integer 42)
--- logs
["field"]
