crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__bound_function_field.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#2 : @constr[0](int -> int) = constr 0 (\parameter#1 : int -> trace "called" in parameter#1) in
addInteger (case@Tag subject#2 of
  0 x#3 -> x#3 21) (case@Tag subject#2 of
  0 y#4 -> y#4 21)
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_2
    [[(builtin addInteger) (case subject_2 (lam x_3 [x_3 (con integer 21)]))]
      (case subject_2 (lam y_4 [y_4 (con integer 21)]))])
    (constr 0
      (lam parameter_1
        (force [[(force (builtin trace)) (con string "called")] (delay parameter_1)])))])
--- optimized Core
let field#11 : int -> int = \parameter#5 : int -> trace "called" in parameter#5 in
let anf#9 : int = field#11 21 in
let anf#10 : int = field#11 21 in
addInteger anf#9 anf#10
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam field_2
      [(lam anf_3
        [(lam anf_4 [[(builtin addInteger) anf_3] anf_4]) [field_2 (con integer 21)]])
        [field_2 (con integer 21)]])
      (lam parameter_1
        (force [[builtin_5 (con string "called")] (delay parameter_1)]))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let subject#2 : @constr[0](int -> int) = constr 0 (\parameter#1 : int -> trace "called" in parameter#1) in
let anf#5 : int = case@Tag subject#2 of
  0 x#3 -> x#3 21 in
let anf#6 : int = case@Tag subject#2 of
  0 y#4 -> y#4 21 in
addInteger anf#5 anf#6
--- isolated folded Core
let field#7 : int -> int = \parameter#1 : int -> trace "called" in parameter#1 in
let subject#2 : @constr[0](int -> int) = constr 0 field#7 in
let anf#5 : int = let x#3 : int -> int = field#7 in
x#3 21 in
let anf#6 : int = let y#4 : int -> int = field#7 in
y#4 21 in
addInteger anf#5 anf#6
--- isolated cleaned Core
let field#7 : int -> int = \parameter#1 : int -> trace "called" in parameter#1 in
let anf#5 : int = field#7 21 in
let anf#6 : int = field#7 21 in
addInteger anf#5 anf#6
--- isolated UPLC before
(program 1.1.0
  [(lam subject_2
    [(lam anf_5
      [(lam anf_6 [[(builtin addInteger) anf_5] anf_6])
        (case subject_2 (lam y_4 [y_4 (con integer 21)]))])
      (case subject_2 (lam x_3 [x_3 (con integer 21)]))])
    (constr 0
      (lam parameter_1
        (force [[(force (builtin trace)) (con string "called")] (delay parameter_1)])))])
--- isolated UPLC after
(program 1.1.0
  [(lam field_7
    [(lam anf_5
      [(lam anf_6 [[(builtin addInteger) anf_5] anf_6]) [field_7 (con integer 21)]])
      [field_7 (con integer 21)]])
    (lam parameter_1
      (force [[(force (builtin trace)) (con string "called")] (delay parameter_1)]))])
--- result
(con integer 42)
--- logs
["called", "called"]
